# pokemon-RL

./: .gitignore  .gitmodules  CLAUDE.md  CODE_REVIEW.md  PHASE_VERIFIERS_PLAN.md  PROGRESS.md  README.md  TESTING_PROTOCOL.md  TODO.md  pyproject.toml
configs/pokemon/: eval_example.toml  eval_full_obs_cot_test.toml  inference_interleaved.toml  inference_node1.toml  rl_interleaved.toml  rl_interleaved_6node.toml  rl_interleaved_test.toml  rl_selfplay.toml  rl_test.toml  rl_vs_abyssal_600.toml  rl_vs_abyssal_600_4x4.toml  rl_vs_heuristic.toml  rl_vs_kakuna.toml
docs/: api.md  architecture.md  concurrency.md  deployment.md  eval_testing_protocol.md  rewards.md  rl_training.md  selfplay.md  testing.md
local_scripts/: launch_2node_prod.sh
scripts/: CLUSTER.md  README.md  _setup_node_hostnet.sh  inspect_interleaved.py  launch_eval.sh  launch_interleaved.sh  launch_rl.sh  run_tests.sh  setup_node.sh  setup_node_hostnet.sh
src/pokemon_rl/: __init__.py  adapter.py  battle.py  coordinator.py  data.py  engine.py  env.py  opponents.py  players.py  translator.py
src/pokemon_rl/eval/: __init__.py  config.py  llm_player.py  report.py  runner.py
tests/: conftest.py  test_adapter.py  test_battle.py  test_data.py  test_engine.py  test_env.py  test_eval_gpu.py  test_eval_integration.py  test_eval_unit.py  test_hooks.py  test_interleaved.py  test_phase4_gpu.py  test_phase4_integration.py  test_phase4_unit.py  test_phase5_integration.py  test_phase5_multinode.py  test_phase5_rl_loop.py  test_phase5_unit.py  test_phase5_verifiers.py  test_players.py  test_translator.py
