[project]
name = "pokemon-rl"
version = "0.1.0"
description = "Pokemon Showdown multi-agent RL environment for prime-rl"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pokemon_rl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: runs without external dependencies",
    "integration: needs Showdown server + poke-env (compute node)",
]
